src/Components/NavBar.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

/* Custom fonts */
@font-face {
    font-family: Centra;
    src: url('../Font/CentraNo2-Bold.ttf');
    font-weight: 700;
}

@font-face {
    font-family: Centra;
    src: url('../Font/CentraNo2-Medium.ttf');
    font-weight: 500;
}

@font-face {
    font-family: Centra;
    src: url('../Font/CentraNo2-Book.ttf');
    font-weight: 400;
}

body {
    font-weight: 400;
    background-color: #020d2e;
    font-family: 'Centra', sans-serif;
}

.top-nav {
    position: fixed; /* Fix navbar to the top */
    top: 0;
    width: 100%;
    height: 80px;
    /* background-color: #1c3972b7; */
    background: linear-gradient(105deg, #020d2ecd,#1c3972, #00b1e4);
    background-color: rgba(0, 0, 0, 0.625);
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 10em;
    z-index: 1000; /* Ensure navbar is on top */
    padding-top: 2.5em;
    padding-bottom: 2.5em;
    
}

.sec1 {
    display: flex;
    align-items: center;
    justify-content: center;
    padding-left: 6.5%;
}

.sec2 {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2em;
    padding-right: 6.5%;
}

.social-icons {
    display: flex;
    flex-direction: row;
    gap: 0.6em;
    float: right;
    justify-content: center;
    align-items: center;
}

.social-icons li {
    list-style: none;
    border: 1px solid rgba(255, 255, 255, 0.797);
    border-radius: 26px;
    padding: 0.5em 0.8em;
    padding-top: 0.7em;
    background-color: #1c3972;
}
.social-icons li:hover{
    /* background: linear-gradient(105deg, #000000ae,#1c3972, #00b1e4); */
    background-color: #1c3972cf;
}
.social-icons li a img {
    transition: transform 0.3s ease;
}

.social-icons li a:hover img {
    transform: scale(1.35);
    /* Scale up the size on hover */
}
.beh-icon, .gith-icon, .linkedin-icon{
    filter: invert(100%);
}
.nav-logo>a>img {
    width: 6.8em;
    height: 5em;
}
.nav-logo:hover{
    cursor: pointer;
    transform: translate(1.1);
}

.top-but-box {
    display: flex;
    justify-content: center;
    align-items: center;
    /* background-color: rgb(237, 93, 15) */
}

.connect-but {
    background-color: transparent; 
    /* color: #00b1e4; */
    color: white;
    border: none;
    font-size: 1em;
    font-weight: bolder;
    /* background: linear-gradient(105deg, #000000ae,#006589); */
    /* border: 1px solid rgba(255, 255, 255, 0.5);  */
    background-size: 200% 100%;
    transition: background-position 0.3s ease;
}
/* #8f75e4 #893492*/
.connect-but:hover {
    cursor: pointer;
    filter: brightness(90%) ;
}

/*
background:

    linear-gradient(to right, #007bff 50%, #ffffff 50%): This creates a linear gradient that goes from left to right.
    #007bff 50%: This sets the background color to #007bff (blue) for the first 50% of the gradient.
    #ffffff 50%: This sets the background color to #ffffff (white) for the remaining 50% of the gradient.

background-size: 200% 100%;:

    200%: The gradient is twice as wide as the button. This is done to create space for the sliding effect.
    100%: The gradient covers the full height of the button.

transition: background-position 0.3s ease;:

    This specifies the transition effect for the background position. The background position will change smoothly over a duration of 0.3s with an ease timing function.
    
        .button:hover:
        This targets the button when it is hovered over.

    background-position: -100% 0;:
        This shifts the background position of the gradient to the left completely (-100%), creating the sliding effect from left to right.
 */
.link-to-sections {
    list-style: none;
    display: flex;
    gap: 2em;
    color: #00b1e4;
    /* color: rgba(255, 255, 255, 0.704); */
    /* margin-left: 2em; */
    justify-content: center;
    align-items: center;
    /* margin-left: 1.5em; */
    /* background-color: wheat; */
}

.link-to-sections li a {
    font-family: 'Centra', sans-serif;
    font-size: 1.2em;
    text-decoration: none;
}

.link-to-sections li a:visited {
    color: #00b1e4;
}

.link-to-sections li a:hover {
    filter: brightness(130%);
}

.link-to-sections li {
    width: 70px;
    /* Fixed width for list items so as to prevent the dispalcement of every element from its place in the navbar*/
}

.sec3, .mobile-menu{
    display: none;
}

/*adding Responsiveness */

/* For smaller laptops */
@media (max-width:1200px) and (min-width: 1025px) {
    .top-nav{
        gap: 6em;
    }
    .link-to-sections{
        gap: 1.5em;
    }
    .sec3{
        display: none;
    }
}

/* For tablets */
@media (max-width:1024px) and (min-width: 769px) {
    .top-nav{
        gap: 2em;
    }
    .link-to-sections{
        gap: 0.2em;
    }
    .nav-logo>a>img {
        width: 4.8em;
        height: 3em;
    }
    .link-to-sections li a {
        font-size: 1.1em;
    }
    .sec3{
        display: none;
    }
    .top-but-box{
        display: none;
    }
}

/* For mobile devices */
@media (max-width:768px) and (min-width: 481px) {
    .top-nav{
        gap: 0em;
    }
    .nav-logo>a>img {
        width: 3.8em;
        height: 3em;
    }
    .link-to-sections li a {
        font-size: 1em;
    }
    .social-icons{
        display: none;
    }
    .top-but-box{
        margin-right:1.4em;
    }
    .sec3 button{
        border: none;
        background-color: #12121200;
        filter: invert(100%);
    }
    .sec3>button>img{
        width: 2em;
        height: 2em;
        margin-right: 2.5em;
    }
    .sec3{
        display: inline;
        position: absolute;
        right: 0;
    }
    .social-icons, .top-but-box, .link-to-sections li a {
        display: none;
    }
    .connect-but span{
        display: none;
    }
}

/* For smaller mobile devices */
@media (max-width:480px) and (min-width: 320px) {
    .top-nav{
        gap: 0em;
        background-color: black;
    }
    .sec1{
        /* margin-left: 4%; */
    }
    .nav-logo>a>img {
        padding-top: 0.4em;
        width: 3.8em;
        height: 3em;
    }
    .social-icons, .top-but-box, .link-to-sections li a {
        display: none;
    }
    .sec3 button{
        border: none;
        background-color: #12121200;
        filter: invert(100%);
    }
    .sec3>button>img{
        width: 2em;
        height: 2em;
        margin-right: 2.5em;
    }
    .sec3{
        display: inline;
        position: absolute;
        right: 0;
    }
    .connect-but span{
        display: none;
    }
    
/* Mobile menu styling */
.mobile-menu {
    position: fixed;
    top: 80px;
    right: 0;
    width: 100%;
    height: calc(100vh - 80px);
    background-color: #020d2ee8;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    z-index: 999;
}

.mobile-menu ul {
    list-style: none;
    padding: 0;
    margin: 0;
    text-align: center;
}

.mobile-menu ul li {
    margin: 1em 0;
}

.mobile-menu ul li a {
    color: #00b1e4;
    font-size: 1.5em;
    text-decoration: none;
}

.mobile-menu ul li a img {
    width: 1.2em; /* Adjust size */
    height: 1.2em; /* Adjust size */
}
}

.hidden {
    transform: translateY(-100%);
    transition: transform 0.3s ease;
}

.top-nav {
    transition: transform 0.3s ease;
}

